# powershell-clipd

./: Cargo.toml  README.md  clip  clipd.ps1  tmux.conf.snippet
clipd-rs/: Cargo.toml
clipd-rs/src/: main.rs
contrib/: claude-copy  wclip
contrib/claude-skills/: clipwire-send.md  clipwire.md
src/: main.rs
