[package]
name = "clipwire"
version = "0.1.0"
edition = "2021"

[dependencies]
axum        = "0.7"
tokio       = { version = "1", features = ["full"] }
clap        = { version = "4", features = ["derive", "env"] }
anyhow      = "1"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
ureq        = "2"
toml        = "0.8"
dirs-next   = "2"
image       = { version = "0.25", default-features = false, features = ["png", "bmp"] }
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rhai               = "1"
shlex              = "1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_Shell_PropertiesSystem",
    # WinRT toast notification (register 承認フロー)
    "Foundation",
    "UI_Notifications",
    "Data_Xml_Dom",
] }

[profile.release]
opt-level = 3
lto       = true
strip     = true
